--- a/anjuman_deep_learning_model_safe_drive.ipynb
+++ b/anjuman_deep_learning_model_safe_drive.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -449,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create a model with few dense and dropout layers. For dense layer the activation function is `relu` and the last layer it is `softmax`. The first layer is input layer with input dimension is equal to the number of feature value. We print out the model summary at the end of defining the model.  "
+    "We create a model with few dense and dropout layers. For dense layer the activation function is `relu` and the last layer it is `sigmoid`. The first layer is input layer with input dimension is equal to the number of feature value. We print out the model summary at the end of defining the model.  "
    ]
   },
   {
@@ -508,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To optimize the training process we use `adam` optimizer function, `mean_squared_error` calculation for the loss calculation and then `accuracy` as a metrics. So, the model will try to adjust it weight and bias value to achieve higher possible accuracy with lower possible loss and in a optimized way."
+    "To optimize the training process we use `adam` optimizer function, `binary_crossentropy` calculation for the loss calculation and then `accuracy` as a metrics. So, the model will try to adjust it weight and bias value to achieve higher possible accuracy with lower possible loss and in a optimized way."
    ]
   },
   {
