--- a/anjuman_deep_learning_model_safe_drive.ipynb
+++ b/anjuman_deep_learning_model_safe_drive.ipynb
@@ -766,9 +766,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.6827032566070557, accuracy: 0.6867724657058716\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"loss: {}, accuracy: {}\".format(loss,accuracy))"
    ]
