--- a/anjuman_deep_learning_model_safe_drive.ipynb
+++ b/anjuman_deep_learning_model_safe_drive.ipynb
@@ -4,6 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Group 1\n",
+    "(Arranged in alphabetic order considering the student ID numbers)\n",
+    "#### C00233605 \tAnjuman Ara Kali.\n",
+    "#### C00246500   Arnab Roy\n",
+    "#### C00255172 \tAlan O' Reilly\n",
+    "#### C00265987 \tElaine Koyce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following work, we try to create a deep learning model to predict whether the driver will initiate a claim in the following year or not (which is the `target` column in the data) based on any other available information. The data is collected from the following source.\n",
+    "\n",
+    "https://www.kaggle.com/mu202199/safe-driver-prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Following figure is a typical Deep learning model [1] The Convolution part does the feature extraction from the input and the part with dense layers does the classification part. In our case we have extracted features. So, our model only consists of dense layers.\n",
     "<img src=\"cnn.jpg\" width=\"400\" height=\"50\">"
    ]
